--- a/style.css
+++ b/style.css
@@ -174,6 +174,14 @@ body {
         border-radius: 16px 16px 0 0;
     }
 
+        #sidebar h1 {
+        cursor: grab;
+    }
+
+    #sidebar h1:active {
+        cursor: grabbing;
+    }
+
     #sidebar h1::before {
         content: '';
         position: absolute;
