--- a/style.css
+++ b/style.css
@@ -121,18 +121,10 @@ body {
     color: #555;
     margin: 0 0 8px 0;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 }
 
-.info-window-content .address {
-    white-space: normal;
-    word-wrap: break-word;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
+
 
 .info-window-content p i {
     margin-right: 8px;
