--- a/style.css
+++ b/style.css
@@ -188,6 +188,16 @@ body {
     .info-window-content {
         max-width: 250px;
     }
+
+    .info-window-content li {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .reading-room-seats {
+        text-align: left;
+        margin-top: 8px;
+    }
 }
 
 #bubble-container {
